--- a/shop.html
+++ b/shop.html
@@ -240,5 +240,56 @@
 <div class="logo_team">
     <a href="https://chat.whatsapp.com/GPS6ljrMCPc8BaTlVZukWc"><img src="./images/team_logo.png"  alt="team_logo"></a>
 </div>
+<footer class="footer">
+    <div class="footer_container grid grid-col6">
+        <div class="footer__right">
+            <div class="container">
+                <div class="footer_right_info grid-col6-2-1fr ">
+                    <div class="grid grid-col6-2">
+                        <div class="footer_d-flex">
+                            <div class="footer__right_sub1">
+                                <img src="./images/boon_footer.png" alt="boon">
+                            </div>
+                            <div class="footer__right_sub2">
+                                <h3 class="footer__right_sub2-title">boon (def.)</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer_sub-title">
+                        <div class="footer__right_sub3">
+                            <h3 class="footer__title">Something very beneficial or helpful</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h3 class="footer__copy">
+                Copyright Boon Supply 2021. All Rights Reserved
+            </h3>
+        </div>
+        <div class="footer__left">
+            <div class="footer_d-flex">
+                <div class="footer__right1">
+                    <nav class="footer__left-nav">
+                        <h3 class="footer__link-title">Shop</h3>
+                        <a href="#" class="footer__link">Shop All Items</a>
+                        <a href="#" class="footer__link">Shop Reusable</a>
+                        <a href="#" class="footer__link">Shop Toxin Free</a>
+                    </nav>
+                    <nav class="footer__left-nav footer__left-nav_mt">
+                        <h3 class="footer__link-title">Support</h3>
+                        <a href="#" class="footer__link">Contact Us</a>
+                        <a href="#" class="footer__link">Terms of Service</a>
+                        <a href="#" class="footer__link">Privacy Policy</a>
+                    </nav>
+                </div>
+                <nav class="footer__left-nav footer__left-nav_ml">
+                    <h3 class="footer__link-title">About</h3>
+                    <a href="#" class="footer__link">About Boon Market</a>
+                    <a href="#" class="footer__link">The Boon Life</a>
+                </nav>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
