--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!----> <!--Шаблон для комментариев-->
 <!--Начало секции hero-->
 <section class="hero">
-    
+
     <div class="hero__container">
         <!--Начало внутренного div shop-part-->
         <div class="hero__shop-part">
@@ -334,85 +334,139 @@
 
 <section class="shop-moon">
     <div class="shop-moon_container">
-
-
-    <h2 class="shop-moon__info-subText shop-moon__text">#ShopForGood</h2>
-    <div class="shop-moon__line">
-        <div class="shop-moon__card grid grid-col5 d-flex">
-            <div class="shop-moon__d-flex">
-                <div class="shop-moon__card1 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame.png" alt="" class="">
+        <h2 class="shop-moon__info-subText shop-moon__text">#ShopForGood</h2>
+        <div class="shop-moon__line">
+            <div class="shop-moon__card grid grid-col5 d-flex">
+                <div class="shop-moon__d-flex">
+                    <div class="shop-moon__card1 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame.png" alt="" class="">
+                        </div>
+                    </div>
+                    <div class="shop-moon__card1 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame%20(1).png" alt="" class="">
+                        </div>
+                    </div>
+                    <div class="shop-moon__card1 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame%20(2).png" alt="" class="">
+                        </div>
+                    </div>
+                    <div class="shop-moon__card1 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame%20(3).png" alt="" class="">
+                        </div>
+                    </div>
+                    <div class="shop-moon__card1 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame%20(4).png" alt="" class="">
+                        </div>
                     </div>
                 </div>
-                <div class="shop-moon__card1 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame%20(1).png" alt="" class="">
+                <div class="shop-moon__d-flex">
+                    <div class="shop-moon__card2 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame%20(5).png" alt="" class="">
+                        </div>
                     </div>
-                </div>
-                <div class="shop-moon__card1 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame%20(2).png" alt="" class="">
+                    <div class="shop-moon__card2 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame%20(6).png" alt="" class="">
+                        </div>
                     </div>
-                </div>
-                <div class="shop-moon__card1 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame%20(3).png" alt="" class="">
+                    <div class="shop-moon__card2 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame%20(7).png" alt="" class="">
+                        </div>
                     </div>
-                </div>
-                <div class="shop-moon__card1 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame%20(4).png" alt="" class="">
+                    <div class="shop-moon__card2 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame%20(8).png" alt="" class="">
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="shop-moon__d-flex">
-                <div class="shop-moon__card2 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame%20(5).png" alt="" class="">
-                    </div>
-                </div>
-                <div class="shop-moon__card2 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame%20(6).png" alt="" class="">
-                    </div>
-                </div>
-                <div class="shop-moon__card2 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame%20(7).png" alt="" class="">
-                    </div>
-                </div>
-                <div class="shop-moon__card2 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame%20(8).png" alt="" class="">
-                    </div>
-                </div>
-                <div class="shop-moon__card2 ">
-                    <div class="shop-moon__img">
-                        <img src="./images/Frame%20(9).png" alt="" class="">
+                    <div class="shop-moon__card2 ">
+                        <div class="shop-moon__img">
+                            <img src="./images/Frame%20(9).png" alt="" class="">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
 </section>
 <section class="boon-letter">
     <div class="container">
         <h2 class="boon-letter__info-subText boon-letter__text">Boonletter</h2>
-        <p class="boon-letter__infos-subtitle">Treat yourself with weekly product releases, digital love, and exclusive deals.</p>
+        <p class="boon-letter__infos-subtitle">Treat yourself with weekly product releases, digital love, and exclusive
+            deals.</p>
         <form class="boon-letter__form boon-letter__center">
-            <label for="first" ></label>
+            <label for="first"></label>
             <input id="first" type="text" placeholder="First Name" class="boon-letter__name">
-            <label for="email" ></label>
+            <label for="email"></label>
             <input id="email" type="email" placeholder="Email Address" class="boon-letter__email">
             <button class="boon-letter__btn-desc">go</button>
         </form>
     </div>
 </section>
 <div class="logo_team">
-    <a href="https://chat.whatsapp.com/GPS6ljrMCPc8BaTlVZukWc"><img src="./images/team_logo.png"  alt="team_logo"></a>
+    <a href="https://chat.whatsapp.com/GPS6ljrMCPc8BaTlVZukWc"><img src="./images/team_logo.png" alt="team_logo"></a>
 </div>
+
+<footer class="footer">
+    <div class="footer_container grid grid-col6">
+        <div class="footer__right">
+            <div class="container">
+                <div class="footer_right_info grid-col6-2-1fr ">
+                    <div class="grid grid-col6-2">
+                        <div class="footer_d-flex">
+                        <div class="footer__right_sub1">
+                            <img src="./images/boon_footer.png" alt="boon">
+                        </div>
+                        <div class="footer__right_sub2">
+                            <h3 class="footer__right_sub2-title">boon (def.)</h3>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="footer_sub-title">
+                        <div class="footer__right_sub3">
+                            <h3 class="footer__title">Something very beneficial or helpful</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h3 class="footer__copy">
+                Copyright Boon Supply 2021. All Rights Reserved
+            </h3>
+        </div>
+        <div class="footer__left">
+            <div class="footer_d-flex">
+                <div class="footer__right1">
+                    <nav class="footer__left-nav">
+                        <h3 class="footer__link-title">Shop</h3>
+                        <a href="#" class="footer__link">Shop All Items</a>
+                        <a href="#" class="footer__link">Shop Reusable</a>
+                        <a href="#" class="footer__link">Shop Toxin Free</a>
+                    </nav>
+                    <nav class="footer__left-nav footer__left-nav_mt">
+                        <h3 class="footer__link-title">Support</h3>
+                        <a href="#" class="footer__link">Contact Us</a>
+                        <a href="#" class="footer__link">Terms of Service</a>
+                        <a href="#" class="footer__link">Privacy Policy</a>
+                    </nav>
+                </div>
+            <nav class="footer__left-nav footer__left-nav_ml">
+                <h3 class="footer__link-title">About</h3>
+                <a href="#" class="footer__link">About Boon Market</a>
+                <a href="#" class="footer__link">The Boon Life</a>
+            </nav>
+            </div>
+        </div>
+    </div>
+</footer>
+<section class="preview">
+    <p class="preview__title">CGE - Chyngyz - Guldana - Erzhan ⒸCopyright 2021</p>
+</section>
 <!----> <!--Шаблон для комментариев-->
 </body>
 </html>
